--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,40 +1,293 @@
-<div class="jumbotron">
-  <h2>Welcome to - LoneStarRuby</h2>
-  <p class="lead">Most frameworks make you choose between speed and a productive environment. <a href="http://phoenixframework.org">Phoenix</a> and <a href="http://elixir-lang.org">Elixir</a> give you both.</p>
+<body class="landing-page">
+<div class="container">
+  <header class="g-header"><a class="g-header-logo" href="/">
+    <span>LoneStarRuby</span><span>&nbsp;Austin</span></a>
+    <nav class="g-header-nav">
+      <ul>
+        <!-- <li><a href="/documents/sponsor-prospectus-2015.pdf" target="_blank">Sponsor Prospectus</a></li> -->
+        &nbsp;
+      </ul>
+    </nav>
+  </header>
 </div>
 
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
+<div class="pg-home-hero-wrap" id="hero">
+<div class="container">
+  <img class="logo-header" width="200" src="images/lsrf-ball-logo-205x205-scaled.png">
+<div class="pg-home-hero">
+<header class="s3">
+  <h1 class="s0">
+    <span>
+    LoneStarRuby</span><span class="type-accent">2015
+    </span></h1>
+  <h2 class="type-weight-normal">August 15th, Austin, TX</h2>
+</header>
+<p class="type-secondary s4">LoneStarRuby is a 1-day conference for highly motivated programmers.</p>
+<a class="ui-btn-round" href="https://relyworks.formstack.com/forms/lonestarruby_cfp_2015">Submit a Talk</a>
+<!-- <a class="ui-btn-round" href="http://formstack/lonestarruby_cfp_2015">Register Now</a> -->
+</div>
+</div>
+</div>
+<div class="g-nav-wrap">
+<div class="js-nav">
+<nav class="g-nav">
+<ul class="container type-small">
+<li class="logo"><a class="icon-logo" href="#hero"></a></li>
+<li><a class="js-nav-link" href="#news">news</a></li>
+<li><a class="js-nav-link" href="#speakers">speakers</a></li>
+<li><a class="js-nav-link" href="#schedule">schedule</a></li>
+<li><a class="js-nav-link" href="#location">location</a></li>
+<li><a class="js-nav-link" href="#sponsors">sponsors</a></li>
+<li><a class="js-nav-link" href="#updates">updates</a></li>
+</ul>
+</nav>
+</div>
+</div>
+<div class="container">
+
+<section class="mod-section news s4-pad-top pos-clearfix js-home-section" id="news">
+<div class="pg-home-news-left">
+<h1 class="s0">News</h1>
+<!-- <a href="/news">Read More</a> -->
+</div> 
+<div class="pg-home-news-right">
+<!-- <h3><a href="#">Registration</a></h3>  -->
+<h3>Registration</h3>
+<div class="type-secondary type-truncate">
+  <p>Registration open soon.
+  </p>
+</div>
+</div>
+</section>
+
+<a name="speakers" id="speakers"></a>
+<section class="past-speakers mod-section js-home-section" id="speakers">
+  <h1>Keynote Speakers</h1>
+  <div>
+    <ul class="l-tile-wrap">
+      <li class="l-tile-3">
+        <div class="l-tile-content">
+          <img alt="Saron Yitbarek" class="pg-home-speaker-img" src="images/saron_yitbarek2.jpg">
+          <h3>Saron Yitbarek</h3>
+          <i>NYC</i>
+          <a class="pg-home-speaker-link" href="//twitter.com/saronyitbarek">@saronyitbarek</a>
+          <p class="type-secondary type-small pg-home-speaker-bio js-truncate" data-truncate="400">
+          Saron Yitbarek is a developer, currently leading the Tech Jobs Academy program at Microsoft. 
+          She's also the founder of CodeNewbie, the most supportive community of programmers and people 
+          learning to code, and host of the weekly CodeNewbie Podcast, available in your favorite podcasting app.
+          </p>
+        </div>
+      </li>
+
+      <li class="l-tile-3">
+        <div class="l-tile-content">
+          <img alt="Avdi Grimm" class="pg-home-speaker-img" src="images/avdi_grimm.jpg">
+          <h3>Avdi Grimm</h3>
+          <i>Knoxville, Tennessee</i>
+          <a class="pg-home-speaker-link" href="//twitter.com/avdi">@avdi</a>
+          <p class="type-secondary type-small pg-home-speaker-bio js-truncate" data-truncate="400">
+          80% angel, 10% daemon, the rest is hard to explain.
+          </p>
+        </div>
+      </li>
+
+      <li class="l-tile-3">
+        <div class="l-tile-content">
+          <img alt="Dave Thomas" class="pg-home-speaker-img" src="images/Dave_Thomas.jpg">
+          <h3>Dave Thomas</h3>
+          <i>Dallas, Texas</i>
+          <a class="pg-home-speaker-link" href="//twitter.com/pragdave">@pragdave</a>
+          <p class="type-secondary type-small pg-home-speaker-bio js-truncate" data-truncate="400">
+          Programmer turned publisher (but mostly programmer)
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section class="schedule mod-section js-home-section" id="schedule">
+<h1>Speakers</h1>
+<p>Talks submission deadline is July 10. Speakers will be posted shortly after the deadline.</p>
+<h3><a class="ui-btn-round" href="https://relyworks.formstack.com/forms/lonestarruby_cfp_2015">Submit a Talk</a></h3>
+</section>
+
+<section class="schedule mod-section js-home-section" id="schedule">
+  <h1>Draft Schedule</h1>
+  <p>Below is a draft of the schedule. Details will be completed as soon as speaker selections are made.</p>
+  <div class="pg-home-schedule-wrap">
     <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">8:30AM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Breakfast / Registration</span></h3>
+        </div>
       </li>
-      <li>
-        <a href="http://hexdocs.pm/phoenix">Docs</a>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">9:00AM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Welcome</span></h3>
+        </div>
       </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXAM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Keynote</span> <span>-</span> <span>Saron Yitbarek</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXAM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Break</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXAM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Keynote</span> <span>-</span> <span>Dave Thomas</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXAM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Break</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXAM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Speaker</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXPM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Lunch</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">X:XXPM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Speakers and Breaks</span></h3>
+          <p></p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">5:00PM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Keynote</span> <span>-</span> <span>Avdi Grimm</span></h3>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">5:40PM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Vendor Party and Happy Hour</span></h3>
+          <p>Open bar and munchies at the conference center.</p>
+        </div>
+      </li>
+
+      <li class="pg-home-schedule-item">
+        <div class="pg-home-schedule-time">7:30PM</div>
+        <div class="pg-home-schedule-info">
+          <h3 class="no-mar-top"><span>Afterparty</span></h3>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+</section>
+
+<section class="location mod-section js-home-section" id="location">
+  <h1>Location</h1>
+  <div>
+    <ul id="marker-list">
+      <li id="conference">
+        <h3>Conference</h3>
+        <p>Norris Conference Center</p>
+        <p>Northcross Mall, 2525 W Anderson Ln #365</p>
+        <p>Austin, TX 78757</p>
+      </li>
+      <li id="after-party">
+        <h3>After-Party</h3>
+        <p>TBA</p>
       </li>
     </ul>
   </div>
 
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/issues?state=open">Issues</a>
-      </li>
-      <li>
-        <a href="irc://irc.freenode.net/elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
-  </div>
+  <div id="map-canvas"></div>
+</section>
 </div>
 
+<div class="color-bg-white on-light">
+<div class="container">
+
+<section class="mod-section sponsor js-home-section" id="sponsors">
+  <h1>Sponsors</h1>
+<h2>Become A Sponsor</h2>
+<p class="text">Sponsoring LoneStarRuby is a great way to connect with the Ruby
+community and show your support. We have openings for sponsorship of
+this year's conference at all levels. Get in touch with us, we'd
+love to speak with you! <a href="mailto:jimfreeze@gmail.com">jimfreeze@gmail.com</a></p>
+</section>
+</div>
+</div>
+<div class="container">
+
+<section class="updates mod-section js-home-section" id="updates">
+  <h1>Updates</h1>
+
+  <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>
+  <div id="mc_embed_signup">
+    <form action="//lonestarruby.us8.list-manage.com/subscribe/post?u=5c44f4ebacf7d77245471f86d&amp;id=2fe24b09e6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+        <label for="mce-EMAIL">Get Updates to LoneStarRuby 2015</label>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_5c44f4ebacf7d77245471f86d_2fe24b09e6" tabindex="-1" value=""></div>
+        <div class="clear"><input type="submit" value="Get Updates" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      </div>
+    </form>
+  </div>
+
+</section>
+<footer class="g-footer">
+<div class="g-footer-top"><strong>&copy; LoneStarRuby 2015</strong></div>
+<div class="g-footer-bottom">
+  <p>
+  LoneStarRuby is an event for professionals as well as all family members.
+  Our Code of Conduct is simple: Be respectful and be nice.
+  Questions? Email us at <a href="mailto:jimfreeze@gmail.com">jimfreeze@gmail.com</a> 
+  or tweet us at <a href="//twitter.com/lonestarruby">@lonestarruby</a>.
+  </p>
+</div>
+</footer>
+
+</div>
+<div class="clearfix"></div>
+  <script src="app.js"></script>
+  <script src="truncate.js"></script>
+  <script src="scroll.js"></script>
+  <script src="modal.js"></script>
+</body>
+</html>
