--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -22,7 +22,7 @@
     </span></h1>
   <h2 class="type-weight-normal">August 15th, Austin, TX</h2>
 </header>
-<p class="type-secondary s4">LoneStarRuby is a one-day Ruby & Rails conference that will truly inspired you.</p>
+<p class="type-secondary s4">LoneStarRuby is a one-day Ruby & Rails conference that will truly inspire you.</p>
 <a class="ui-btn-round" href="https://relyworks.formstack.com/forms/lonestarruby_cfp_2015">Submit a Talk</a>
 <!-- <a class="ui-btn-round" href="http://formstack/lonestarruby_cfp_2015">Register Now</a> -->
 </div>
@@ -230,7 +230,6 @@
     </ul>
   </div>
 
-  <div id="map-canvas"></div>
 </section>
 </div>
 
