--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -24,7 +24,8 @@
 </header>
 <p class="type-secondary s4">LoneStarRuby is a one-day Ruby & Rails conference that will truly inspire you.</p>
 <a class="ui-btn-round" href="https://relyworks.formstack.com/forms/lonestarruby_cfp_2015">Submit a Talk</a>
-<!-- <a class="ui-btn-round" href="http://formstack/lonestarruby_cfp_2015">Register Now</a> -->
+&nbsp;
+<a class="ui-btn-round" href="https://relyworks.formstack.com/forms/lonestarruby_payment">Register Now</a>
 </div>
 </div>
 </div>
