fixed html typo

--- a/web/templates/page/coc.html.eex
+++ b/web/templates/page/coc.html.eex
@@ -9,9 +9,9 @@
     <section class="schedule mod-section">
       <h1>Code of Conduct</h1>
 
-      <p class="text"
-         Acting with decorum and exhibiting moral conduct includes refraining from the use of profanity or sexualized language, treating others with respect, and not engaging in harassing behaviours. Harassment includes, but is not limited to, offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
-         </p>
+      <p class="text">
+        Acting with decorum and exhibiting moral conduct includes refraining from the use of profanity or sexualized language, treating others with respect, and not engaging in harassing behaviours. Harassment includes, but is not limited to, offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
+      </p>
 
 <p class="text">
   Participants asked to stop any harassing behavior are expected to comply immediately.
