fixed some typos

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -247,7 +247,7 @@ All attendees, speakers, sponsors and volunteers at our conference are required 
 </p>
 
 <p class="text">
-Our conference is dedicated to providing a family friendly and harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, or religion. Conference participants are expected to observe the policies herein, refrain from using profanity, and act with decorum at all times. Sexual language and imagery is inappropriate for our conference venue, including attendees’ attire, talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.
+Our conference is dedicated to providing a family friendly and harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, or religion. Conference participants are expected to observe the policies herein, refrain from using profanity, and act with decorum at all times. Sexual language and imagery is inappropriate for our conference, including attendees’ attire, talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.
 <p class="text">
 <a href="/code-of-conduct">Read more and find how to contact organizers.</a>
 </p>
