--- a/web/templates/page/coc.html.eex
+++ b/web/templates/page/coc.html.eex
@@ -22,11 +22,11 @@
 </p>
 
 <p class="text">
-  If a participant engages in harassing behavior, the conference organisers may take appropriate as needed, including warning the offender or expulsion from the conference with no refund.
+  If a participant engages in harassing behavior, the conference organisers may take appropriate action as needed, including warning the offender or expulsion from the conference with no refund.
 </p>
 
 <p class="text">
-  If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately.
+  If you are being harassed, notice that someone else is being harassed, or have any other concerns, <strong>please contact a member of conference staff immediately.</strong>
   Conference staff will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
 </a>
 
