--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -114,7 +114,7 @@
 
 <section class="schedule mod-section js-home-section" id="schedule">
 <h1>Speakers</h1>
-<p>Talks submission is now closed. Speakers will be posted this week.</p>
+<p>Talk submission is now closed. Speakers will be posted this week.</p>
 <!-- <h3><a class="ui-btn-round" href="https://relyworks.formstack.com/forms/lonestarruby_cfp_2015">Submit a Talk</a></h3> -->
 </section>
 
