--- a/web/templates/page/coc.html.eex
+++ b/web/templates/page/coc.html.eex
@@ -27,7 +27,7 @@
 
 <p class="text">
   If you are being harassed, notice that someone else is being harassed, or have any other concerns, <strong>please contact a member of conference staff immediately.</strong>
-  Conference staff will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
+  Conference staff will be happy to help participants contact venue security or local law enforcement, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
 </a>
 
 <p class="text">
